# Student-Management

./: CMakeLists.txt  CONTRIBUTORS.md  LICENSE  README.md  build.bat  database.json  run.bat
database/: data.json
include/: application.hpp  database.hpp  utils.hpp
src/: main.cpp
src/core/: application.cpp  application.h
src/core/utils/: Input.cpp  Input.h  database.cpp  database.h  debug.h  utils.h
